完善了坐标系类

--- a/DrawTrangle.vcxproj
+++ b/DrawTrangle.vcxproj
@@ -97,6 +97,10 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <HeapReserveSize>10000000</HeapReserveSize>
+      <HeapCommitSize>10000000</HeapCommitSize>
+      <StackReserveSize>10000000</StackReserveSize>
+      <StackCommitSize>10000000</StackCommitSize>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
